Grace/tests/gibbs/errors/t239.grace
// ERROR = P1025
var number := 42
print(number.)
